# task-cli

./: README.md  pyproject.toml  task-cli.py
.github/workflows/: release.yml
src/: colors.py  command_line.py  interface.py
src/task_cli/: cli.py  command_line.py  interface.py
